--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="contact-us.html">Contact Us</a></li>
         <li><a href="about-us.html">About Us</a></li>
+        <li><a href="team.html">Our Team</a></li>
       </ul>
     </nav>
   </header>
